# PCRbias

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: config.example.yaml
docs/: AUDIT_REPORT.md  CHAPTER23_PIPELINE.md  CHAPTER4_PIPELINE.md  CHAPTER4_SCRIPT_STATUS.tsv  DATA_AVAILABILITY.md  GITHUB_DEPLOYMENT.md  HARDCODED_PATHS.tsv  OUTPUTS.md  PUBLIC_RELEASE_CHECKLIST.md  ROADMAP.md  RUN_ORDER.chapter2_3.tsv  RUN_ORDER.chapter4.tsv  SCHEMAS.md  SCRIPT_INVENTORY.tsv
examples/: samples_meta.chapter4.example.tsv
examples/synthetic/: README.md  samples_meta.synthetic.tsv
legacy/chapter2_3/: 00_setup_dirs.sh  01_make_sample_metadata_template.py  02_single_end_qc_trim_filter.sh  03_build_master_long_abundance.py  04_compute_basic_qc_report.py  05_make_expected_design_templates.py  06_threshold_sensitivity.py  07_compute_haplotype_complexity.py  08_make_sequence_annotation_template.py  09_merge_sequence_annotations.py  10_compute_bias_and_nontarget.py  11_export_full_annotation_queries.py  12_build_local_blastdb.sh  13_run_blast_by_marker.sh  14_collect_blast_best_hits.py  (+16 more)
tests/: test_chapter4_synthetic_smoke.py  test_repository_consistency.py  test_schema_validation.py  test_tools.py
tools/: audit_hardcoded_paths.py  check_repository_consistency.py  make_inventory.py  run_synthetic_smoke.py  smoke_test.sh
(+174 files in other folders)
